Products Repository header created

--- a/Ejercicio 10.vcxproj
+++ b/Ejercicio 10.vcxproj
@@ -140,10 +140,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ProductEntity.cpp" />
+    <ClCompile Include="ProductsRepository.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ProductEntity.h" />
+    <ClInclude Include="ProductsRepository.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
